# pixeart

./: .gitignore  Cargo.toml  README.md
client/: Cargo.toml
client/src/: main.rs
server/: .gitignore  Cargo.toml
server/src/: blacklist.rs  db.rs  email.rs  global.rs  handler.rs  main.rs  panel.rs  payment.rs  server.rs  urls.rs
server/static/: contact.html  pp.html  tos.html
server/static/index/: main.html  recovery.html  thanks.html  verify.html
server/static/script/: main.js  recovery.js
server/static/style/: main.css  recovery.css  thanks.css
shared/: Cargo.toml
shared/src/: lib.rs
